--- a/spring-ioc-java-05/src/main/resources/jdbc.properties
+++ b/spring-ioc-java-05/src/main/resources/jdbc.properties
@@ -1,2 +1,4 @@
-jdbc.username=root
-jdbc.password=root
+mysql.url=jdbc:mysql://172.30.1.196:3306/lzg
+mysql.driver=com.mysql.cj.jdbc.Driver
+mysql.username=root
+mysql.password=Jaka2022!
